Fixed button size on narrow screen, fixed font size for widget header

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -19,3 +19,9 @@ body {
 *:after {
   box-sizing: inherit;
 }
+
+.option, .modal, .header, .big-button {
+    word-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
+}
