--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -1,7 +1,6 @@
 // this creates a container 
 .container {
-    max-width: 60rem;
+    max-width: 80rem;
     margin: 0 auto;
     padding: 0 $m-size;
-    word-wrap: break-word;
 }
