--- a/src/styles/components/_option.scss
+++ b/src/styles/components/_option.scss
@@ -4,9 +4,6 @@
     padding: $m-size;
     border-bottom: $xxs-size solid $black;
     font-size: $m-size; 
-    word-wrap: normal;
-    word-break: break-all;
-    hyphens: auto; 
 }
 
 .option__text {
