--- a/src/styles/components/_widget.scss
+++ b/src/styles/components/_widget.scss
@@ -33,10 +33,10 @@
 
 @media (max-width: $desktop-breakpoint) {
     .widget-header {
-        font-size: 1.9rem;
+        font-size: 1.6rem;
     }
 
     .widget__message {
-        font-size: 1.7rem;
+        font-size: 1.5rem;
     }
 }
